5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1758_762.log
== TEST (2019-05-28 13:22:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de, ano)


-- ERROR:
File "XXXX", line 11
    print(dia, "de", b[mes1], "de, ano)
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:23:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:23:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:23:29) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:23:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:23:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:24:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
b = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
a = input("insira a string de 8 digitos: ")
dia = a[:2]
mes = a[2:4]
ano = a[4:]
i = 0
mes = int(mes)
mes1 = mes - 1
print(dia, "de", b[mes1], "de", ano)


-- EXECUTION TIME:
0.51196
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
